[gd_scene load_steps=4 format=3 uid="uid://ds87pmrr3v4gx"]

[ext_resource type="Script" path="res://Scenes/brewery.gd" id="1_6s150"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ia6b1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ne7il"]
size = Vector2(32, 32)

[node name="Brewery" type="Node2D"]
script = ExtResource("1_6s150")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.639216, 1, 0.768627, 0.6)
position = Vector2(-9.53674e-07, 7.15256e-07)
scale = Vector2(32, 32)
texture = SubResource("PlaceholderTexture2D_ia6b1")

[node name="DepositArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DepositArea"]
shape = SubResource("RectangleShape2D_ne7il")

[node name="WheatAmountLabel" type="Label" parent="."]
offset_left = -10.0
offset_top = -35.0
offset_right = 23.0
offset_bottom = -12.0

[connection signal="area_entered" from="DepositArea" to="." method="_on_deposit_area_area_entered"]
[connection signal="area_exited" from="DepositArea" to="." method="_on_deposit_area_area_exited"]
